apps/base/media/decypharr/decypharr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: decypharr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://decypharr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Decypharr"
    gethomepage.dev/description: "Movie organizer/manager"
    gethomepage.dev/app: decypharr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://github.com/sirrobot01/decypharr/blob/main/docs/docs/images/logo.png?raw=true"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`decypharr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: decypharr
          port: 8282
  tls: {}
